fix modals not showing on mobile, fix position of header-content div

--- a/css/creative.css
+++ b/css/creative.css
@@ -178,10 +178,10 @@ aside {
 header {
     position: relative;
     width: 100%;
-
+    height: 100%;
     text-align: center;
     color: #fff;
-    background-image: url(../img/cover3.jpg);
+    background-image: url(../img/cover.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -190,15 +190,16 @@ header {
 }
 
 header .header-content {
-    position: relative;
+    position: absolute;
+    bottom: 0%;
     width: 100%;
-    padding: 100px 15px;
+    padding: 50px 15px;
     text-align: center;
 }
 
 header .header-content .header-content-inner h1 {
     font-weight: 600;
-    margin-top: 65%;
+    margin-top: 0;
     margin-bottom: 0;
     text-transform: uppercase;
 }
@@ -230,7 +231,8 @@ header .header-content .header-content-inner p {
 
     header .header-content {
         position: absolute;
-        top: 50%;
+        bottom: 0%;
+        margin-bottom: 10px;
         padding: 0 50px;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
